<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastel_blue">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3"/>

    <TextView
        android:id="@+id/greeting"
        android:layout_width="160sp"
        android:layout_height="@dimen/smaller_btn"
        android:text="@string/layout_3_txt"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0sp"
        android:layout_height="@dimen/smaller_btn"
        android:text="@string/lay3_btn_txt"
        android:onClick="nextPage"
        android:background="@color/lilac"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline"
        android:text="@string/hello_middle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline"
        android:text="@string/hello_from_the_bottom"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".8"/>


</androidx.constraintlayout.widget.ConstraintLayout>