<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/bigger_btn"
        android:layout_height="@dimen/bigger_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pastel_green"
        android:text="@string/centered_lay2_txt"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/smaller_btn"
        android:layout_height="@dimen/smaller_btn"
        android:background="@color/pastel_blue"
        android:text="@string/left_lay2_txt"
        app:layout_constraintRight_toRightOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/smaller_btn"
        android:layout_height="@dimen/smaller_btn"
        android:background="@color/lilac"
        android:text="@string/right_lay2_txt"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
        android:onClick="nextPage"/>
</androidx.constraintlayout.widget.ConstraintLayout>